* Change "Monero" to "Electroneum"

--- a/src/templates/address.html
+++ b/src/templates/address.html
@@ -25,7 +25,7 @@
 
     <H4 style="margin:5px">
         Transactions:<br/> Sorry, its not possible to find txs associated with
-        normal addresses in Monero
+        normal addresses in Electroneum
     </H4>
 
     <br/>
