--- a/src/templates/partials/tx_details.html
+++ b/src/templates/partials/tx_details.html
@@ -103,10 +103,10 @@
                 <label for="tab-2">Prove sending</label>
 
                 <div class="content">
-                    <h4 style="margin: 0px">Prove to someone that you have sent them Monero in this transaction</h4>
+                    <h4 style="margin: 0px">Prove to someone that you have sent them Electroneum in this transaction</h4>
                     <h5 style="margin: 0px">
                         Tx private key can be obtained using <i>get_tx_key</i>
-                        command in  <i>monero-wallet-cli</i> command line tool
+                        command in  <i>electroneum-wallet-cli</i> command line tool
                         <br/>
                         Note: address and tx private key are sent to the server, as the calculations are done on the server side
                     </h5>
