* Rebrand electroneum-blockchain-explorer

--- a/src/templates/address.html
+++ b/src/templates/address.html
@@ -1,7 +1,7 @@
 
 <div>
     <br/>
-    <H4 style="margin:5px">Address:<br/>{{xmr_address}}</H4>
+    <H4 style="margin:5px">Address:<br/>{{etn_address}}</H4>
     <br/>
 
     {{#testnet}}
