--- a/src/templates/checkrawoutputkeys.html
+++ b/src/templates/checkrawoutputkeys.html
@@ -14,9 +14,9 @@
     {{^has_error}}
         <h4>Output keys for address: {{address}}</h4>
         <h4>Viewkey: {{viewkey}}</h4>
-        {{#has_total_xmr}}
-            <h4>Total ETN: {{total_xmr}}</h4>
-        {{/has_total_xmr}}
+        {{#has_total_etn}}
+            <h4>Total ETN: {{total_etn}}</h4>
+        {{/has_total_etn}}
 
         <div class="center">
 
