--- a/src/templates/partials/tx_details.html
+++ b/src/templates/partials/tx_details.html
@@ -55,7 +55,7 @@
     </table>
 
 
-  <h3>{{outputs_no}} output(s) for total of {{outputs_xmr_sum}} etn</h3>
+  <h3>{{outputs_no}} output(s) for total of {{outputs_etn_sum}} etn</h3>
   <div class="center">
       <table class="center">
           <tr>
@@ -89,7 +89,7 @@
                     </h5>
                     <form action="/myoutputs" method="post" style="width:100%; margin-top:2px" class="style-1">
                         <input type="hidden" name="tx_hash" value="{{tx_hash}}"><br/>
-                        <input type="text" name="xmr_address" size="90" placeholder="Electroneum address"><br/>
+                        <input type="text" name="etn_address" size="90" placeholder="Electroneum address"><br/>
                         <input type="text" name="viewkey" size="90" placeholder="Private viewkey" style="margin-top:5px"><br/>
                         <input type="hidden" name="raw_tx_data" value="{{raw_tx_data}}">
                         <!--above raw_tx_data field only used when checking raw tx data through tx pusher-->
@@ -113,7 +113,7 @@
                     <form action="/prove" method="post" style="width:100%;margin-top:2px" class="style-1">
                        <input type="hidden" name="txhash" value="{{tx_hash}}"><br/>
                        <input type="text" name="txprvkey" size="90" placeholder="Tx private key"><br/>
-                       <input type="text" name="xmraddress" size="90" placeholder="Recipient's Electroneum Address" style="margin-top:5px"><br/>
+                       <input type="text" name="etnaddress" size="90" placeholder="Recipient's Electroneum Address" style="margin-top:5px"><br/>
                        <input type="submit" value="Prove sending" style="margin-top:5px">
                     </form>
                 </div>
@@ -138,17 +138,17 @@
       </div>
     {{/enable_mixins_details}}
 
-    {{^inputs_xmr_sum_not_zero}}
-        <h3>{{inputs_no}} input(s) for total of {{inputs_xmr_sum}} etn</h3>
-    {{/inputs_xmr_sum_not_zero}}
-    {{#inputs_xmr_sum_not_zero}}
+    {{^inputs_etn_sum_not_zero}}
+        <h3>{{inputs_no}} input(s) for total of {{inputs_etn_sum}} etn</h3>
+    {{/inputs_etn_sum_not_zero}}
+    {{#inputs_etn_sum_not_zero}}
         {{^have_any_unknown_amount}}
-            <h3>{{inputs_no}} inputs(s) for total of {{inputs_xmr_sum}} etn</h3>
+            <h3>{{inputs_no}} inputs(s) for total of {{inputs_etn_sum}} etn</h3>
         {{/have_any_unknown_amount}}
         {{#have_any_unknown_amount}}
-            <h3>{{inputs_no}} inputs(s) for total of at least {{inputs_xmr_sum}} etn</h3>
+            <h3>{{inputs_no}} inputs(s) for total of at least {{inputs_etn_sum}} etn</h3>
         {{/have_any_unknown_amount}}
-    {{/inputs_xmr_sum_not_zero}}
+    {{/inputs_etn_sum_not_zero}}
 
     {{#show_part_of_inputs}}
         <h5 style="margin-top: 2px">
