--- a/src/templates/mempool.html
+++ b/src/templates/mempool.html
@@ -19,7 +19,7 @@
                 <td>{{age}}</td>
                 <td><a href="/tx/{{hash}}">{{hash}}</a></td>
                 <td>{{fee}}</td>
-                <td>{{xmr_outputs}}</td>
+                <td>{{etn_outputs}}</td>
                 <td>{{no_inputs}}({{no_nonrct_inputs}})/{{no_outputs}}</td>
                 <td>{{mixin}}</td>
                 <td>{{txsize}}</td>
