Tidy up and fix links to libraries

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -42,7 +42,7 @@
                     <td><a href="/block/{{hash}}">{{hash}}</a></td>
                     <td>{{notx}}</td>
                     <td>{{fees}}</td>
-                    <td>{{xmr_outputs}}</td>
+                    <td>{{etn_outputs}}</td>
                     <td>{{mixin_range}}</td>
                     <td>{{blksize}}</td>
                 </tr>
