--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -2,7 +2,7 @@
     <h6 style="margin-top:10px">
         <a href="https://github.com/electroneum/electroneum-blockchain-explorer">source code</a>
         | explorer version (api): {{git_branch_name}}-{{last_git_commit_date}}-{{last_git_commit_hash}} ({{api}})
-        | monero version: {{electroneum_version_full}}
+        | electroneum version: {{electroneum_version_full}}
     </h6>
 </div>
 </body>
