--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -45,7 +45,7 @@
             Network difficulty: {{difficulty}}
             | Hard fork: v{{current_hf_version}}
             | Hash rate: {{hash_rate}}
-            | Fee per byte: {{fee_per_kb}}
+            | Fee per kB: {{fee_per_kb}}
             | Median block size limit: {{block_size_limit}} kB
             {{^is_current_info}}
             | Data from {{age}} {{age_format}} ago
@@ -83,7 +83,7 @@
                     <td>transaction hash</td>
                     <td>fee</td>
                     <td>outputs</td>
-                    <td>in/out/pID</td>
+                    <td>in/out<!- -/pID- -></td>
                     <td>tx size [kB]</td>
                 </tr>
                 {{#txs}}
@@ -94,7 +94,7 @@
                     <td><a href="/tx/{{hash}}">{{hash}}</a></td>
                     <td>{{fee_micro}}</td>
                     <td>{{sum_outputs_short}}</td>
-                    <td>{{no_inputs}}/{{no_outputs}}/{{pID}}</td>
+                    <td>{{no_inputs}}/{{no_outputs}}<!- -/{{pID}}- -></td>
                     <td>{{tx_size_short}}</td>
                 </tr>
                 {{/txs}}
