--- a/src/templates/mempool.html
+++ b/src/templates/mempool.html
@@ -10,7 +10,7 @@
                 <td>transaction hash</td>
                 <td>fee/per_kB</td>
                 <!--<td>outputs</td>-->
-                <td>in/out/pID</td>
+                <td>in/out<!- -/pID- -></td>
                 <td>tx size [kB]</td>
             </tr>
             {{#mempooltxs}}
@@ -19,7 +19,7 @@
                 <td><a href="/tx/{{hash}}">{{hash}}</a></td>
                 <td>{{fee}}/{{payed_for_kB}}</td>
                 <!--<td>{{etn_outputs}}</td>-->
-                <td>{{no_inputs}}/{{no_outputs}}/{{pID}}</td>
+                <td>{{no_inputs}}/{{no_outputs}}<!- -/{{pID}}- -></td>
                 <td>{{txsize}}</td>
             </tr>
             {{/mempooltxs}}
