--- a/src/templates/block.html
+++ b/src/templates/block.html
@@ -73,7 +73,7 @@
                 <tr>
                     <td><a href="/tx/{{hash}}">{{hash}}</a></td>
                     <td>{{sum_outputs}}</td>
-                    <td>{{fee_micro}}</td>
+                    <td>{{tx_fee}}</td>
                     <td>{{no_inputs}}/{{no_outputs}}</td>                    
                     <td>{{tx_size}}</td>
                     <td>{{version}}</td>
