--- a/src/templates/partials/tx_details.html
+++ b/src/templates/partials/tx_details.html
@@ -1,23 +1,6 @@
 
 <div>
 
-    <H4 style="margin:5px">Tx hash: {{tx_hash}}</H4>
-    {{#enable_mixins_details}}
-        <H5 style="margin:5px">Tx prefix hash: {{tx_prefix_hash}}</H5>
-    {{/enable_mixins_details}}
-    <H5 style="margin:5px">Tx public key: <span id="tx_pub_key">{{tx_pub_key}}</span></H5>
-    <span id="add_tx_pub_keys" style="display: none;">{{add_tx_pub_keys}}</span>
-
-    {{#has_payment_id}}
-        <H5 style="margin:5px">Payment id: <span id="payment_id">{{payment_id}}</span></H5>
-        <H5 style="margin:5px">Payment id as ascii: {{payment_id_as_ascii}}</H5>
-    {{/has_payment_id}}
-
-    {{#has_payment_id8}}
-        <H5 style="margin:5px">Payment id (encrypted): <span id="payment_id">{{payment_id8}}</span></H5>
-    {{/has_payment_id8}}
-
-
     {{#have_prev_hash}}
         <H5>Previous tx: <a href="/tx/{{prev_hash}}">{{prev_hash}}</a></H5>
     {{/have_prev_hash}}
@@ -26,7 +9,29 @@
         <H5>Next tx: <a href="/tx/{{next_hash}}">{{next_hash}}</a></H5>
     {{/have_next_hash}}
 
-
+    <table class="center" style="width: 80%; margin-top:10px">
+        <tr>
+            <td>Transaction Hash: {{tx_hash}}</td>
+        </tr>
+        {{#enable_mixins_details}}
+        <tr>
+            <td>Transaction Prefix Hash: {{tx_prefix_hash}}</td>
+        </tr>
+        {{/enable_mixins_details}}
+        <tr>
+            <td>Transaction Public Key: {{tx_pub_key}}</td>
+        </tr>
+        {{#has_payment_id}}
+        <tr>
+            <td>Payment ID: <span id="payment_id">{{payment_id}} ({{payment_id_as_ascii}})</span></td>
+        </tr>
+        {{/has_payment_id}}
+        {{#has_payment_id8}}
+        <tr>
+            <td>Payment ID (encrypted): <span id="payment_id">{{payment_id8}}</span></td>
+        </tr>
+        {{/has_payment_id8}}
+    </table>
 
     <table class="center" style="width: 80%; margin-top:10px">
         {{^have_raw_tx}}
