--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,9 +1,27 @@
-<div class="center">
-    <h6 style="margin-top:10px">
-        <a href="https://github.com/electroneum/electroneum-blockchain-explorer">source code</a>
-        | explorer version (api): {{git_branch_name}}-{{last_git_commit_date}}-{{last_git_commit_hash}} ({{api}})
-        | electroneum version: {{electroneum_version_full}}
-    </h6>
 </div>
+</div>
+<footer id="footer" role="contentinfo" class="row padded">
+    <div class="footer-text">
+        <div class="center">
+            <h6 style="margin-top:10px">
+                <a href="https://github.com/electroneum/electroneum-blockchain-explorer">source code</a>
+                | explorer version (api): develop-2021-04-20-8d27da8 (1.1)
+                | electroneum version: 3.3.1.0-e53810204
+            </h6>
+        </div>
+    </div>
+    <div class="footer-box footer-text">
+        We are using the power of blockchain to give access to the global digital economy for millions of people in the
+        emerging economies. </div>
+    <div class="footer-box footer-end">
+        <div class="footer-details">
+            <p class="copyright">
+                © Electroneum Ltd - Registered in England No. 10845797 Dun and Bradstreet No. 223070089. VAT Number GB
+                312 6774 09.
+            </p>
+        </div>
+    </div>
+</footer>
 </body>
+
 </html>
