--- a/src/templates/address.html
+++ b/src/templates/address.html
@@ -82,6 +82,10 @@
                                             {{/is_coinbase}}
                                             {{^is_coinbase}}
                                             <li>
+                                                {{#is_stealth}}
+                                                <span title="{{from}}" class="txio-address" style="color:#2ab1f3;">{{from}}</span>
+                                                {{/is_stealth}}
+                                                {{^is_stealth}}
                                                 {{#is_current_etn_address}}
                                                 <span title="{{from}}" class="txio-address">{{from}}</span>
                                                 {{/is_current_etn_address}}
@@ -90,6 +94,7 @@
                                                     <span title="{{from}}" class="txio-address">{{from}}</span>
                                                 </a>
                                                 {{/is_current_etn_address}}
+                                                {{/is_stealth}}
                                                 <span class="txio-amount">
                                                     {{amount}}
                                                 </span>
@@ -111,12 +116,17 @@
                                         <ul>
                                             {{#tx_outputs}}
                                             <li>
+                                                {{#is_stealth}}
+                                                <span title="{{to}}" class="txio-address" style="color:#2ab1f3;">{{to}}</span>
+                                                {{/is_stealth}}
+                                                {{^is_stealth}}
                                                 {{#is_current_etn_address}}
                                                 <span title="{{to}}" class="txio-address">{{to}}</span>
                                                 {{/is_current_etn_address}}
                                                 {{^is_current_etn_address}}
                                                 <a title="{{to}}" href="/address/{{to}}" class="txio-address">{{to}}</a>
                                                 {{/is_current_etn_address}}
+                                                {{/is_stealth}}
                                                 {{#is_change}}
                                                 <span class="txio-amount"><span
                                                         class="text-muted">{{amount}}</span></span>
